ENH: interpolate: BSpline
Add a base class BSpline, and a low-level cython routines
for evaluating b-spline functions. This class only evaluates
b-splines and does not do any fitting. Representation is
compatible with FITPACK.

--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,7 @@ scipy/integrate/_dopmodule.c
 scipy/integrate/lsodamodule.c
 scipy/integrate/vodemodule.c
 scipy/interpolate/_ppoly.c
+scipy/interpolate/_bspl.c
 scipy/interpolate/interpnd.c
 scipy/interpolate/src/dfitpack-f2pywrappers.f
 scipy/interpolate/src/dfitpackmodule.c
