--- a/.gitignore
+++ b/.gitignore
@@ -196,6 +196,7 @@ scipy/sparse/sparsetools/sparsetools_impl.h
 scipy/spatial/ckdtree.cxx
 scipy/spatial/ckdtree.h
 scipy/spatial/qhull.c
+scipy/special/_comb.c
 scipy/special/_ellip_harm_2.c
 scipy/special/_ellip_harm_2.h
 scipy/special/_logit.c
