--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ matrix:
         - TESTMODE=fast
         - COVERAGE=
         - NUMPYSPEC="numpy==1.7.2"
+        - USE_SDIST=1
     - python: 2.7
       env:
         - TESTMODE=full
@@ -116,6 +117,13 @@ script:
         # Need verbose output or TravisCI will terminate after 10 minutes
         pip wheel . -v
         pip install wheelhouse/* -v
+        USE_WHEEL_BUILD="--no-build"
+    elif [ "${USE_SDIST}" == "1" ]; then
+        python setup.py sdist
+        # Move out of source directory to avoid finding local scipy
+        pushd dist
+        pip install scipy*
+        popd
         USE_WHEEL_BUILD="--no-build"
     fi
   - python -u $OPTIMIZE runtests.py -g -m $TESTMODE $COVERAGE $USE_WHEEL_BUILD |& tee runtests.log
