--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,8 @@ scipy/special/_ufuncs_cxx.pyx binary
 scipy/special/_ufuncs_cxx.pxd binary
 scipy/special/_ufuncs.pyx binary
 scipy/special/_ufuncs_defs.h binary
+scipy/special/cython_special.pxd binary
+scipy/special/cython_special.pyx binary
 scipy/linalg/_blas_subroutine_wrappers.f binary
 scipy/linalg/_blas_subroutines.h binary
 scipy/linalg/_lapack_subroutine_wrappers.f binary
