CI: try to avoid the pip failure on python 3.5 on TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -116,7 +116,8 @@ script:
     if [ "${USE_WHEEL}" == "1" ]; then
         # Need verbose output or TravisCI will terminate after 10 minutes
         pip wheel . -v
-        pip install wheelhouse/* -v
+        pip --version
+        pip install wheelhouse -v
         USE_WHEEL_BUILD="--no-build"
     elif [ "${USE_SDIST}" == "1" ]; then
         python setup.py sdist
