--- a/.gitignore
+++ b/.gitignore
@@ -113,7 +113,7 @@ benchmarks/scipy
 benchmarks/html
 benchmarks/scipy-benchmarks
 scipy/__config__.py
-scipy/_lib/_test_ccallback_cython.c
+scipy/_lib/_ccallback_c.c
 scipy/cluster/_vq.c
 scipy/cluster/_hierarchy.c
 scipy/fftpack/_fftpackmodule.c
