--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,11 @@ matrix:
         - TESTMODE=full
         - COVERAGE=--coverage
         - NUMPYSPEC=numpy
+    - python: 3.6
+      env:
+        - TESTMODE=fast
+        - COVERAGE=
+        - NUMPYSPEC=numpy
 addons:
   apt:
     packages:
