--- a/.gitignore
+++ b/.gitignore
@@ -211,6 +211,7 @@ scipy/special/_ufuncs_cxx.h
 scipy/special/specfunmodule.c
 scipy/special/cython_special.c
 scipy/special/cython_special.h
+scipy/special/_test_round.c
 scipy/stats/_rank.c
 scipy/stats/mvn-f2pywrappers.f
 scipy/stats/mvnmodule.c
