--- a/.gitignore
+++ b/.gitignore
@@ -212,7 +212,11 @@ scipy/special/_ufuncs_cxx.h
 scipy/special/specfunmodule.c
 scipy/special/cython_special.c
 scipy/special/cython_special.h
+scipy/special/_cython_special_cxx.cxx
+scipy/special/_cython_special_cxx.h
 scipy/special/_test_round.c
+scipy/special/_test_sf_error.c
+scipy/special/_have_openmp.py
 scipy/stats/_rank.c
 scipy/stats/mvn-f2pywrappers.f
 scipy/stats/mvnmodule.c
