--- a/.gitignore
+++ b/.gitignore
@@ -200,6 +200,7 @@ scipy/sparse/sparsetools/sparsetools_impl.h
 scipy/spatial/ckdtree.cxx
 scipy/spatial/ckdtree.h
 scipy/spatial/qhull.c
+scipy/spatial/_voronoi.c
 scipy/special/_comb.c
 scipy/spatial/qhull_misc_config.h
 scipy/special/_ellip_harm_2.c
