--- a/.travis.yml
+++ b/.travis.yml
@@ -104,7 +104,7 @@ before_install:
   - export LIBRARY_PATH=$HOME/.local/lib
   - export LD_LIBRARY_PATH=$HOME/.local/lib
   # End install gmpy2 dependencies
-  # Speed up install by not compiling Cython
+  # Need to install Cython 0.23.4 from source to avoid errors for Python 3.6
   - travis_retry pip install --install-option="--no-cython-compile" Cython==0.23.4
   - travis_retry pip install $NUMPYSPEC
   - travis_retry pip install nose mpmath argparse Pillow codecov
