--- a/.travis.yml
+++ b/.travis.yml
@@ -115,6 +115,8 @@ before_install:
       export CCACHE_CPP2=1
       export CFLAGS="-arch x86_64"
       export CXXFLAGS="-arch x86_64"
+      which clang++
+      ccache -s
       printenv
     fi
   - python --version # just to check
