--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,6 @@ matrix:
       env:
         - TESTMODE=fast
         - COVERAGE=
-        - USE_SDIST=1
         - NUMPYSPEC=numpy
         - MB_PYTHON_VERSION=3.6
 addons:
@@ -174,6 +173,10 @@ script:
         popd
         USE_WHEEL_BUILD="--no-build"
     fi
+  - python setup.py build > build.log
+  - git clean -xdf
+  - python setup.py build > build.log
+  - ccache -s
   - python -u $OPTIMIZE runtests.py -g -m $TESTMODE $COVERAGE $USE_WHEEL_BUILD 2>&1 | tee runtests.log
   - tools/validate_runtests_log.py $TESTMODE < runtests.log
   - if [ "${REFGUIDE_CHECK}" == "1" ]; then python runtests.py -g --refguide-check; fi
