--- a/appveyor.yml
+++ b/appveyor.yml
@@ -160,7 +160,7 @@ build_script:
       $env:Path += ";$MINGW"
       $env:NPY_NUM_BUILD_JOBS = "4"
       If ($PYTHON_VERSION -ne 2.7) {
-          pip install https://github.com/frerich/clcache.git
+          pip install git+https://github.com/frerich/clcache.git
           $env:CC="clcache"
           $env:CXX="clcache"
       }
