--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,7 @@ addons:
     - libsuitesparse-dev
     - ccache
     - swig
+    - libmpc-dev
 cache:
   directories:
     - $HOME/.ccache
@@ -76,7 +77,7 @@ before_install:
       export PATH=/usr/lib/ccache:$PATH
       free -m
     elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew install gcc ccache
+      brew install gcc ccache libmpc
       touch config.sh
       git clone https://github.com/matthew-brett/multibuild.git
       source multibuild/common_utils.sh
@@ -104,24 +105,11 @@ before_install:
   - ulimit -a
   - mkdir builds
   - pushd builds
-  # Install gmpy2 dependencies
-  - mkdir -p $HOME/.local
-  - wget ftp://ftp.gnu.org/gnu/mpc/mpc-1.0.2.tar.gz
-  - tar xzvf mpc-1.0.2.tar.gz
-  - pushd mpc-1.0.2
-  - ./configure --prefix=$HOME/.local
-  - make
-  - make install
-  - popd
-  - export CPATH=$HOME/.local/include
-  - export LIBRARY_PATH=$HOME/.local/lib
-  - export LD_LIBRARY_PATH=$HOME/.local/lib
-  # End install gmpy2 dependencies
   # Need to install Cython 0.23.4 from source to avoid errors for Python 3.6
+  - travis_retry pip install --upgrade pip setuptools wheel
   - travis_retry pip install --install-option="--no-cython-compile" Cython==0.23.4
   - travis_retry pip install $NUMPYSPEC
   - travis_retry pip install pytest pytest-xdist pytest-faulthandler mpmath argparse Pillow codecov
-  - travis_retry pip install --upgrade pip setuptools
   - travis_retry pip install gmpy2  # speeds up mpmath (scipy.special tests)
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
