--- a/.travis.yml
+++ b/.travis.yml
@@ -63,33 +63,23 @@ addons:
     - swig
     - libmpc-dev
 cache:
-  directories:
-    - $HOME/.ccache
+  - ccache
+  - pip
 before_install:
   # Work in our own virtualenv to isolate from travis-ci packages.
   - echo $TRAVIS_OS_NAME
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      python -m pip install --upgrade pip
-      pip install --upgrade virtualenv
-      virtualenv --python=python venv
-      source venv/bin/activate
-      export PATH=/usr/lib/ccache:$PATH
       free -m
     elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew install gcc ccache libmpc
       touch config.sh
-      git clone https://github.com/matthew-brett/multibuild.git
+      git clone --depth=1 https://github.com/matthew-brett/multibuild.git
       source multibuild/common_utils.sh
       source multibuild/travis_steps.sh
       before_install
       which ccache
-      ln -s ccache /usr/local/bin/gcc
-      ln -s ccache /usr/local/bin/g++
-      ln -s ccache /usr/local/bin/cc
-      ln -s ccache /usr/local/bin/c++
-      ln -s ccache /usr/local/bin/clang
-      ln -s ccache /usr/local/bin/clang++
+      export PATH=/usr/local/opt/ccache/libexec:$PATH
       export USE_CCACHE=1
       export CCACHE_MAXSIZE=200M
       export CCACHE_CPP2=1
