--- a/.travis.yml
+++ b/.travis.yml
@@ -115,7 +115,7 @@ before_install:
       fi
     fi
   - if [ "${TESTMODE}" == "full" ]; then pip install pytest-cov coverage; fi
-  - if [ "${USE_WHEEL}" == "1" ]; then pip install wheel; fi
+  - if [ "${USE_WHEEL}" != "1" ]; then pip uninstall -y wheel; fi
   - |
     if [ "${REFGUIDE_CHECK}" == "1" ]; then
         travis_retry pip install matplotlib Sphinx==1.5.5
