--- a/.travis.yml
+++ b/.travis.yml
@@ -99,7 +99,7 @@ before_install:
   - pushd builds
   # Need to install Cython 0.23.4 from source to avoid errors for Python 3.6
   - travis_retry pip install --upgrade pip setuptools wheel
-  - travis_retry pip install Cython==0.23.4
+  - travis_retry pip install cython==0.25.2
   - travis_retry pip install $NUMPYSPEC
   - travis_retry pip install --upgrade pytest pytest-xdist pytest-faulthandler mpmath argparse Pillow codecov
   - travis_retry pip install gmpy2  # speeds up mpmath (scipy.special tests)
