--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ before_install:
       free -m
       export PATH=/usr/lib/ccache:$PATH
     elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew install gcc ccache libmpc
+      HOMEBREW_NO_AUTO_UPDATE=1 brew install gcc ccache libmpc
       touch config.sh
       git clone --depth=1 https://github.com/matthew-brett/multibuild.git
       source multibuild/common_utils.sh
